[package]
name = "owned-drop"
version = "0.1.0"
edition = "2021"
description = "A wrapper that enables ownership on drop"
readme = "README.md"
repository = "https://github.com/terrarier2111/owned-drop"
license-file = "LICENSE"
keywords = ["no_std", "utility"]
categories = ["No standard library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
